--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "reloader.py"
-version = "0.8.6"
+version = "0.8.7"
 description = "A simple script reloader"
 license = "MIT"
 authors = ["EcmaXp <ecmaxp@ecmaxp.kr>"]
+repository = "https://github.com/EcmaXp/reloader.py"
 packages = [
     {include = "reloader.py"},
 ]
