--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
-[tool.poetry]
+[project]
 name = "reloader.py"
-version = "0.15.1"
+version = "0.16.0"
 description = "A simple script reloader"
 license = "MIT"
-authors = ["EcmaXp <ecmaxp@ecmaxp.kr>"]
-repository = "https://github.com/EcmaXp/reloader.py"
-packages = [{ include = "reloader.py" }]
+authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
+requires-python = ">=3.10"
+dependencies = ["watchdog>=5.0.0"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
@@ -15,6 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Software Development :: Debuggers",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -22,13 +23,18 @@ classifiers = [
     "Topic :: Utilities",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-watchdog = "^5.0.0"
+[project.urls]
+Repository = "https://github.com/EcmaXp/reloader.py"
 
-[tool.poetry.scripts]
+[project.scripts]
 "reloader" = "reloader:main"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["reloader.py"]
+
+[tool.hatch.build.targets.sdist]
+packages = ["reloader.py"]
