--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "reloader.py"
-version = "0.16.1"
+version = "0.16.2"
 description = "A simple script reloader"
 license = "MIT"
 authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
@@ -27,16 +27,16 @@ classifiers = [
 Repository = "https://github.com/EcmaXp/reloader.py"
 
 [project.scripts]
-"reloader" = "reloader:main"
-"reloader-py" = "reloader:main"
-"reloader.py" = "reloader:main"
+"reloader" = "__reloader__:main"
+"reloader-py" = "__reloader__:main"
+"reloader.py" = "__reloader__:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["reloader.py"]
+packages = ["reloader.py", "__reloader__.py"]
 
 [tool.hatch.build.targets.sdist]
-packages = ["reloader.py"]
+packages = ["reloader.py", "__reloader__.py"]
